// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbItems /> should render multiple items with slash in between them 1`] = `
[
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gwrAWp"
  >
    <div
      className="sc-bcXGCL gwrAWp"
    >
      <a
        className="sc-bcXGCL gvDgP cap-link"
        href="/projects"
      >
        Project list
      </a>
      <span
        className="sc-bcXGCL gGiqCp cap-text"
      >
        /
      </span>
    </div>
    <div
      className="sc-bcXGCL gwrAWp"
    >
      <p
        className="sc-bcXGCL cOMoVT cap-text"
      >
        New Project
      </p>
    </div>
  </div>,
]
`;

exports[`<BreadCrumbItems /> should render one single item 1`] = `
[
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gwrAWp"
  >
    <div
      className="sc-bcXGCL gwrAWp"
    >
      <p
        className="sc-bcXGCL cOMoVT cap-text"
      >
        Project list
      </p>
    </div>
  </div>,
]
`;
